samples/_failures_safe/1761702814_e4ef0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fcedbd1b.c: In function ‘main’:
./samples/SAFE/__tmp_fcedbd1b.c:170:5: error: expected expression at end of input
  170 |     if (fgets(input, sizeof(input), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_fcedbd1b.c:170:5: error: expected declaration or statement at end of input
